----------------------
* Add DeleteArtifacts manipulator to delete old artifacts directories (CC-446).
 
Origo Publisher
----------------------
* Add Publisher for the Origo collaboration platform (CC-775). Patch by Patrick Ruckstuhl.

ProjectConfig
----------------------
* ProjectConfig.toString() should return Project.toString() to avoid breaking external jmx scripts. Reported by Mark Hatton.

SVN
----------------------
* Relax SVN externals parsing (CC-736). Reported by Patrick Muller.

reporting jsp app
======================

Charts
----------------------
* Charts should now be cached rather than regenerated when no new build has run.

Modifications
----------------------
* Display revision # or label of modification if available (CC-496). Patch by Randy Coulman.


CruiseControl Release Notes - 2.7.2

general
======================
* use Util.doMkDirs() instead of File.mkdirs() to fix possible race condition when creating directories on WinXP, also Windows2000.
* Update bundled cc-config to version 1.7.2.
* Changed how CCDIR is calculated by cruisecontrol.sh in binary distribution to match the source distribution (CC-361)
* Changed connectfour config.xml in binary distribution to use filesystem intead of svn to avoid over loading SourceForge's svn server

contrib
======================

distributed
----------------------
* Added more robust Progress support for AntBuilder on BuildAgents.
* Remove extraneous synchronized flags.
* Add optional child element <remoteResult> to allow retrieval of additional build artifact directories.
* Change CCDist build to execute in the distributed/target directory (same as cc-main).
* Add mail.jar and activation.jar from main to paths for cases where SMTPAppender is used in log4j.properties.
* Add "java.verson" to the list of automatically defined agent entries, as the existing "java.vm.version" shows the hotspot vm version in 1.6.0_04+.

packager
----------------------
* Added SVN Bootstrapper to sample project